--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "expo": "~53.0.17",
     "expo-camera": "^16.1.10",
     "expo-constants": "^17.1.7",
+    "expo-crypto": "^14.1.5",
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-jwt-io": "^1.0.3",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1"
   },
