--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-jwt-io": "^1.0.3",
+    "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.11.1"
   },
