--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "expo-file-system": "^18.1.11",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "node-forge": "^1.3.1",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-base64": "^0.2.1",
+    "react-native-crypto-js": "^1.0.0",
     "react-native-jwt-io": "^1.0.3",
     "react-native-rsa-native": "^2.0.5",
     "react-native-safe-area-context": "^5.5.2",
