--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ yarn-error.*
 *.json
 # Google Cloud credentials
 buoyant-valve-465820-u2-76210518cdaf.json
+
+# exampleMenu
+exampleMenu
+
+# Claude
+CLAUDE.md
+reflection.md
