--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-constants": "^17.1.7",
     "expo-crypto": "^14.1.5",
     "expo-file-system": "^18.1.11",
+    "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
     "node-forge": "^1.3.1",
